--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TheMoneyProject",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
