--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -1,9 +1,9 @@
 {
   "name": "TheMoneyProject",
-  "main": "src/index.js",
+  "main": "index.js",
   "dependencies": {
-    "axios": "^1.1.3",
-    "bcrypt": "^5.1.0",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "body-parser": "1.20.0",
     "ejs": "^3.1.8",
     "ejs-lint": "^0.3.0",
