added unit test cases for register

--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - '3000:3000'
     volumes:
       - ./:/repository
-    command: 'npm start'
+    # command: 'npm start'
+    command: 'npm run testandrun'
 volumes:
   group-project:
