Current stock price

--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -5,11 +5,13 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "1.20.0",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.8",
     "ejs-lint": "^0.3.0",
     "express": "^4.6.1",
     "express-handlebars": "^7.1.2",
     "express-session": "1.17.3",
+    "finnhub": "^1.2.18",
     "pg-promise": "^10.11.1"
   },
   "devDependencies": {
