--- a/ProjectSourceCode/.env
+++ b/ProjectSourceCode/.env
@@ -5,4 +5,4 @@ POSTGRES_DB="users_db"
 
 # Node vars
 SESSION_SECRET="super duper secret!"
-API_KEY="759"
+API_KEY = co698ihr01qmuouogdt0co698ihr01qmuouogdtg
