--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -23,6 +23,6 @@ services:
     volumes:
       - ./:/repository
     # command: 'npm start'
-    command: 'npm start'
+    command: 'npm run testandrun'
 volumes:
   group-project:
